WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200259
Calling beginElement/endElement with the same offset does not run the animation
https://bugs.webkit.org/show_bug.cgi?id=200259
Summary
Calling beginElement/endElement with the same offset does not run the animation
Said Abou-Hallawa
Reported
2019-07-29 17:08:53 PDT
Open the attached test case. Result: A red rectangle is rendered. Expected: A green rectangle is rendered. This bug happens because twe call beginElement/endElement with the same time offset on the <set> element. If we omit calling endElement(), the bug does not happen.
Attachments
test case
(298 bytes, image/svg+xml)
2019-07-29 17:10 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-07-29 17:10:20 PDT
Created
attachment 375129
[details]
test case
Said Abou-Hallawa
Comment 2
2019-07-29 17:10:54 PDT
Failed WPT test:
http://web-platform-tests.live/svg/animations/scripted/end-element-on-inactive-element.svg
Ahmad Saleem
Comment 3
2023-01-21 06:49:31 PST
It is still failing in Safari 16.2 & STP161. Added 'WPTImpact' keyword and link to testcase from WPT.
Ahmad Saleem
Comment 4
2023-11-13 17:28:50 PST
Blink Commit:
https://chromium-review.googlesource.com/c/chromium/src/+/1400663
Ahmad Saleem
Comment 5
2024-06-13 08:49:41 PDT
PR -
https://github.com/WebKit/WebKit/pull/29783
Test locally and it progress this test case and also WPT as well.
EWS
Comment 6
2024-06-19 12:36:46 PDT
Committed
280184@main
(a937e1c8a1a3): <
https://commits.webkit.org/280184@main
> Reviewed commits have been landed. Closing PR #29783 and removing active labels.
Radar WebKit Bug Importer
Comment 7
2024-06-19 12:37:14 PDT
<
rdar://problem/130163227
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug