Ignore instance times from endElement*() for inactive timed elements

https://bugs.webkit.org/show_bug.cgi?id=200259

Reviewed by Said Abou-Hallawa.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Inspired by: https://github.com/chromium/chromium/commit/810144f1502198bb66cd265a2ce9a16ccd106dd2

When endElementAt()/endElement() is trying to add a new instance time
and there's no active interval, just ignore the new instance time.

Spec [1]:

   "While the element is not active, any end specification of the
   event is ignored."

[1] https://www.w3.org/TR/2001/REC-smil-animation-20010904/#Timing-EventSensitivity

* Source/WebCore/svg/SVGAnimationElement.cpp:
(WebCore::SVGAnimationElement::endElementAt):
* Source/WebCore/svg/animation/SVGSMILElement.h:
(WebCore::SVGSMILElement::activeState const):
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/scripted/end-element-on-inactive-element-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/280184@main